--- a/template/admin/article/_article_table.html.twig
+++ b/template/admin/article/_article_table.html.twig
@@ -1,34 +1,36 @@
 <table id="article_table" class="display">
-		<thead>
-			<tr>
-				<th>Titre</th>
-				<th>Date de Modification</th>
-				<th>Chapo</th>
-				<th>Action</th>
+	<thead>
+		<tr>
+			<th>Titre</th>
+			<th>Date de Modification</th>
+			<th>Chapo</th>
+			<th>Action</th>
 
-			</tr>
-		</thead>
-		<tbody>
-			{% if articles is not null %}
-				{% for article in articles|sort %}
-					<tr>
-						<td>{{ article.title }}</td>
-						<td>{{ article.updateDate }}</td>
-						<td>{{ article.chapo }}</td>
-						<td>
-							<a href="/article/{{ article.id }}" target="_blank">Lien vers l'article</a>
-							<a href="/admin/changeArticle/{{ article.id }}">
-								<i class="fas fa-pencil-alt"></i>
-							</a>
-							<a href='/admin/deleteArticle/{{ article.id }}' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
-								<i class="fas fa-trash"></i>
-							</a>
-						</td>
+		</tr>
+	</thead>
+	<tbody>
+		{% if articles is not null %}
+			{% for article in articles|sort %}
+				<tr>
+					<td>
+						<a href="/article/{{ article.id }}" target="_blank">{{ article.title }}</a>
+					</td>
+					<td>{{ article.updateDate|date("d/m/Y H:i") }}</td>
+					<td>{{ article.chapo }}</td>
+					<td>
+						<a href="/article/{{ article.id }}" target="_blank"></a>
+						<a href="/admin/changeArticle/{{ article.id }}">
+							<i class="fas fa-pencil-alt"></i>
+						</a>
+						<a href='/admin/deleteArticle/{{ article.id }}' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
+							<i class="fas fa-trash"></i>
+						</a>
+					</td>
 
-					</tr>
-				{% endfor %}
-				{# {% else %}
-				                        <tr><td colspan="4">Aucun article trouvé.</td></tr> #}
-			{% endif %}
-		</tbody>
-	</table>
+				</tr>
+			{% endfor %}
+			{# {% else %}
+							                        <tr><td colspan="4">Aucun article trouvé.</td></tr> #}
+		{% endif %}
+	</tbody>
+</table>
