--- a/template/admin/user/addRole.html.twig
+++ b/template/admin/user/addRole.html.twig
@@ -1,23 +1,28 @@
- {% extends 'base.html.twig' %} 
+{% extends 'base.html.twig' %}
 {% block style %}
-	 {{ parent() }} 
+	{{ parent() }}
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 {% block body %}
-   
-    {% for user in users %}
-        <div>
-            <p>{{ user.lastname }} {{ user.firstname }} - {{ user.mail }}</p>
-            <form action="/admin/user/addRole" method="post" class="update-role-form">
-                            <input type="hidden" name="user_id" value="{{ user.id }}">
-                            <select name="role" id="role-{{ user.id }}">
-                                <option value="member" {% if user.role == 'member' %}selected{% endif %}>Utilisateur</option>
-                                <option value="admin" {% if user.role == 'admin' %}selected{% endif %}>Administrateur</option>
-                            </select>
-                            <button type="submit">Mettre à jour</button>
-                        </form>
-            <hr>
-        </div> 
-    {% endfor %}
-{% endblock %}
 
+	{% for user in users %}
+		<div>
+			<p>{{ user.lastname }}
+				{{ user.firstname }}
+				-
+				{{ user.mail }}
+				- Statut :
+				{{ user.role}}</p>
+			<form action="/admin/user/addRole" method="post" class="update-role-form">
+				<input type="hidden" name="user_id" value="{{ user.id }}">
+				<select name="role" id="role-{{ user.id }}">
+					<option value="role"></option>
+					<option value="member" {% if user.role == 'member' %} selected {% endif %}>Utilisateur</option>
+					<option value="admin" {% if user.role == 'admin' %} selected {% endif %}>Administrateur</option>
+				</select>
+				<button type="submit" name="submit" value="submit">Mettre à jour</button>
+			</form>
+			<hr>
+		</div>
+	{% endfor %}
+{% endblock %}
