--- a/template/admin/article/index.html.twig
+++ b/template/admin/article/index.html.twig
@@ -1,15 +1,17 @@
-{# {% extends 'base.html.twig' %} #}
+{% extends 'base.html.twig' %}
 {# on prend les blocs de style de et de base.html.twig #}
 {% block style %}
-	{# {{ parent() }} #}
+	{{ parent() }}
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 {% block body %}
 	<a href="/admin/newArticle" class="new-btn">Nouvel article</a>
-	{% include "admin/article/_article_table.html.twig" %}
+	<div class="front-table">
+		{% include "admin/article/_article_table.html.twig" %}
+	</div>
 {% endblock %}
 {% block js %}
-	{# {{ parent() }} #}
+	{{ parent() }}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
 	<script src="../js/datatable_init.js"></script>
