--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-<p class="welcome">bienvenue sur mon blog de developpeuse web </p>
-
+	<p class="welcome">bienvenue sur mon blog de developpeuse web
+	</p>
+	{% include 'contact/contact.html.twig' %}
 {% endblock %}
