--- a/template/security/editPassword.html.twig
+++ b/template/security/editPassword.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{# <label for="password">Nouveau mot de passe:</label>
-        <input type="password" id="password" name="password">
-        <br> #}
-        {% endblock %}
+	<label for="password">Nouveau mot de passe:</label>
+	<input type="password" id="password" name="password">
+	<br>
+{% endblock %}
