--- a/template/security/editProfil.html.twig
+++ b/template/security/editProfil.html.twig
@@ -12,14 +12,12 @@
 		<form action="/editProfil" method="post" class="edit-profile">
 			<div class="form-group profil-field">
 				<label for="firstname">Prénom:</label>
-				<input type="text" id="firstname" name="firstname" 
-                value="{{ user.firstname }} " >
+				<input type="text" id="firstname" name="firstname" value="{{ user.firstname }} ">
 			</div>
 
 			<div class="form-group profil-field">
 				<label for="lastname">Nom:</label>
-				<input type="text" id="lastname" name="lastname" 
-                value="{{ user.lastname }}" >
+				<input type="text" id="lastname" name="lastname" value="{{ user.lastname }}">
 			</div>
 
 			<div class="form-group profil-field">
