--- a/template/security/resetPassword.html.twig
+++ b/template/security/resetPassword.html.twig
@@ -1,7 +1,8 @@
 {# corps du mail #}
 {% block body %}
-    <h1>Réinitialisation du mot de passe </h1>
-    <p>Cliquez sur le lien ci-dessous pour réinitialiser votre mot de passe :</p>
-    <a href="{{ reset_link }}"class="button">Réinitialiser le mot de passe</a>
+	<h1>Réinitialisation du mot de passe
+	</h1>
+	<p>Cliquez sur le lien ci-dessous pour réinitialiser votre mot de passe :</p>
+	<a href="{{ reset_link }}" class="button">Réinitialiser le mot de passe</a>
 
 {% endblock %}
