--- a/template/admin/article/newArticle.html.twig
+++ b/template/admin/article/newArticle.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
-
+{% block style %}
+	{{parent()}}
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.8/dist/trix.css">
+	<script type="text/javascript" src="https://unpkg.com/trix@2.0.8/dist/trix.umd.min.js"></script>
+{% endblock %}
 {% block body %}
-{% include 'admin/article/_form.html.twig' %}
+	{% include 'admin/article/_form.html.twig' %}
 {% endblock %}
