--- a/template/admin/user/addRole.html.twig
+++ b/template/admin/user/addRole.html.twig
@@ -13,12 +13,13 @@
 				{{ user.mail }}
 				- Statut :
 				{{ user.role}}</p>
+
 			<form action="/admin/user/addRole" method="post" class="update-role-form">
 				<input type="hidden" name="user_id" value="{{ user.id }}">
 				<select name="role" id="role-{{ user.id }}">
-					<option value="role"></option>
-					<option value="member" {% if user.role == 'member' %} selected {% endif %}>Utilisateur</option>
-					<option value="admin" {% if user.role == 'admin' %} selected {% endif %}>Administrateur</option>
+					<option selected disabled value="">{{user.role|replace({'[':'', ']':'', '"':''})}}</option>
+					<option value="member" {% if user.role == 'Utilisateur' %} selected {% endif %}>Utilisateur</option>
+					<option value="admin" {% if user.role == 'Administrateur' %} selected {% endif %}>Administrateur</option>
 				</select>
 				<button type="submit" name="submit" value="submit">Mettre à jour</button>
 			</form>
