--- a/template/article/index.html.twig
+++ b/template/article/index.html.twig
@@ -1,21 +1,22 @@
-{# Dans votre fichier article/index.html.twig #}
-
-
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="title-article">
-    <h1>Liste des Articles</h1>
-</div>
-    <ul class="display-article">
-        {% for article in articles %}
-            <li class="article-list">
-                <h2>{{ article.title }}</h2>
-                {% if article.updateDate %}
-                    <p>Date de Modification : {{ article.updateDate|date('d/m/Y') }}</p>
-                {% endif %}
-                <p>Chapô : {{ article.chapo }}</p>
-                <p><a href="/article/{{ article.id }}" target="_blank">Lire l'article</a></p>
-            </li>
-        {% endfor %}
-    </ul>
+	<div class="title-article">
+		<h1>Liste des Articles</h1>
+	</div>
+	<ul class="display-article">
+		{% for article in articles %}
+			<li class="article-list">
+				<h2>{{ article.title }}</h2>
+				{% if article.updateDate %}
+					<p>Date de Modification :
+						{{ article.updateDate|date('d/m/Y') }}</p>
+				{% endif %}
+				<p>Chapô :
+					{{ article.chapo }}</p>
+				<p>
+					<a href="/article/{{ article.id }}" target="_blank">Lire l'article</a>
+				</p>
+			</li>
+		{% endfor %}
+	</ul>
 {% endblock %}
