--- a/template/article/show.html.twig
+++ b/template/article/show.html.twig
@@ -7,30 +7,32 @@
 	<p>Chapô :
 		{{ article.chapo }}</p>
 	<p>Contenu :
-		{{ article.content }}</p>
-	<p>Auteur :
-		{{ article.firstname }} {{ article.lastname }}</p>
-		
-	{% if article.updateDate %}
-		<p>Date de Modification :
-			{{ article.updateDate|date('d/m/Y') }}</p>
-	{% endif %}
+		<div class="style-content">
+			{{ article.content|raw }}</p>
+	</p>
+</div>
+<p>Auteur :
+	{{ article.firstname }}
+	{{ article.lastname }}</p>
 
-	<h2>Commentaires validés et publiés :</h2>
-	<ul>
-		{% for comment in approvedComments %}
-			{% if comment.getIsApproved %}
-				<li>
-					<p>{{ comment.content }}</p>
-					<p>Auteur :
-						{{ comment.getAuthorFullName }}</p>
-					<p>Date de Publication :
-						{{ comment.getDate|date('d/m/Y') }}</p>
-				</li>
-			{% endif %}
+{% if article.updateDate %}
+	<p>Date de Modification :
+		{{ article.updateDate|date('d/m/Y') }}</p>
+{% endif %}
 
-		{% endfor %}
-		{% include 'comment/addComment.html.twig' %}
-	</ul>
+<h2>Commentaires validés et publiés :</h2>
+<ul>
+	{% for comment in approvedComments %}
+		{% if comment.getIsApproved %}
+			<li>
+				<p>{{ comment.content }}</p>
+				<p>Auteur :
+					{{ comment.getAuthorFullName }}</p>
+				<p>Date de Publication :
+					{{ comment.getDate|date('d/m/Y') }}</p>
+			</li>
+		{% endif %}
 
-{% endblock %}
+	{% endfor %}
+	{% include 'comment/addComment.html.twig' %}
+</ul>{% endblock %}
