--- a/template/contact/reachMe.html.twig
+++ b/template/contact/reachMe.html.twig
@@ -7,8 +7,8 @@
 					<img class="contact-img" src="./img/contact-img.jpg" alt="devworld">
 					<div class="contact-overlay">
 						<p>Pour une approche moderne et dynamique d'un site web ou d'une appli mobile !</p>
-					 <div class="arrow-right"></div>
-                    </div>
+						<div class="arrow-right"></div>
+					</div>
 				</div>
 			</div>
 			<div class="right-column">
@@ -17,27 +17,29 @@
 					<p>Ludivine Goldstein</p>
 					<p>Pays de la Loire</p>
 					<p>0623263104</p>
-					<p class="contact-mail"><a href="mailto:ludivinegoldstein@gmail.com">LudGold</a></p>
+					<p class="contact-mail">
+						<a href="mailto:ludivinegoldstein@gmail.com">LudGold</a>
+					</p>
 					<a href="lien_vers_google_maps" class="map-link">
-                    <i class="fas fa-map-marker icon-spacing"></i>Google Maps</a>
+						<i class="fas fa-map-marker icon-spacing"></i>Google Maps</a>
 				</div>
 				<div class="social-icons-contact">
-					<a href="#" class="social-icon-contact">
+					<a href="mailto:ludivinegoldstein@gmail.com" class="social-icon-contact">
 						<i class="fas fa-solid fa-envelope icon-large"></i>
 					</a>
-					<a href="#" class="social-icon-contact">
+					<a href="https://www.facebook.com/titanegirl" class="social-icon-contact">
 						<i class="fab fa-facebook icon-large"></i>
 					</a>
 					<a href="#" class="social-icon-contact">
 						<i class="fab fa-twitter icon-large"></i>
 					</a>
-					<a href="#" class="social-icon-contact">
+					<a href="www.linkedin.com/in/ludivine-goldstein-4677ab128" class="social-icon-contact">
 						<i class="fab fa-linkedin icon-large"></i>
 					</a>
 					<a href="https://github.com/LudGold" target="_blank" class="social-icon-contact">
 						<i class="fab fa-github icon-large"></i>
 					</a>
-					
+
 				</div>
 			</div>
 		</div>
