--- a/template/errors/error403.html.twig
+++ b/template/errors/error403.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<h1 class=erreur>Erreur 403</h1>
-    <p>Accès interdit. Vous n'avez pas l'autorisation d'accéder à cette page.</p>
-    <p>Retournez à la <a href="/">page d'accueil</a>.</p>
+	<h1 class="erreur">Erreur 403</h1>
+	<p>Accès interdit. Vous n'avez pas l'autorisation d'accéder à cette page.</p>
+	<p>Retournez à la
+		<a href="/">page d'accueil</a>.</p>
 {% endblock %}
