--- a/template/security/login.html.twig
+++ b/template/security/login.html.twig
@@ -17,8 +17,6 @@
 		</form>
 		<hr>
 		<a class="forgot-password" href="/forgotPassword">Mot de passe oublié?</a>
-		
-            </div>
-	</div>
 
-{% endblock %}
+	</div>
+</div>{% endblock %}
