--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -28,15 +28,9 @@
 					<a class="nav-link " href="/">Accueil</a>
 				</li>
 				<li class="nav-item who">
-					<a class="nav-link " href="#about">Qui suis-je?</a>
+					<a class="nav-link " href="/home">Qui suis-je?</a>
 				</li>
-				<li class="nav-item parcours">
-					<a class="nav-link " href="#cv">Parcours</a>
-
-				</li>
-				<li class="nav-item realisations">
-					<a class="nav-link " href="#portfolio">Réalisations</a>
-				</li>
+								
 				<li class="nav-item articles">
 					<a class="nav-link " href="/articles">Articles</a>
 					<ul class="edit-articles">
@@ -91,14 +85,14 @@
 			<div class="footer-content">
 				<ul
 					class="social-icons">
-					<!-- Correction: Les éléments <li> sont maintenant correctement intégrés dans une liste <ul> -->
+					
 					<li>
 						<a href="mailto:ludivinezarkos@gmail.com">Contactez Moi</a>
 					</li>
 					<li>
 						<a href="mailto:ludivinezarkos@gmail.com" class="social-icon">
 							<i class="fas fa-envelope"></i>
-							<!-- Correction: Classe Font Awesome pour l'enveloppe -->
+							
 						</a>
 					</li>
 					<li>
@@ -125,7 +119,7 @@
 
 				<ul class="footer-links">
 					<li>
-						<a href="#" class="confidential">Politique de confidentialité</a>
+						<a href="/mentionsLegales" class="confidential">Mentions Légales</a>
 					</li>
 
 				</ul>
@@ -142,18 +136,7 @@
 					<li>
 						<a href="/admin/adminDashboard">Admin</a>
 					</li>
-					<li>
-						<a href="/admin/comment/index">Index</a>
-					</li>
-					<li>
-						<a href="/admin/comment/comments_pending">Commentaires soumis en attente</a>
-					</li>
-					<li>
-						<a href="/admin/comment/comments_approved">Commentaires approuvés</a>
-					</li>
-					<li>
-						<a href="/admin/comment/comments_rejected">Commentaires refusés</a>
-					</li>
+				
 				</ul>
 			</div>
 		</footer>
