--- a/template/security/forgotPassword.html.twig
+++ b/template/security/forgotPassword.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-{# {% block js %}
+ {% block js %}
 	{{parent()}}
 	<script src="../js/password.js"></script>
-{% endblock %} #}
+{% endblock %} 
 {% block body %}
 
 	<p>Entrez votre adresse e-mail ci-dessous pour réinitialiser votre mot de passe :</p>
